# velotype

./: CLAUDE.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.nezha/: config.toml
assets/: README.zh-CN.md  custom-language.example.jsonc
src/: app_menu.rs  main.rs
src/components/: actions.rs
src/components/block/: element.rs  interactions.rs  render.rs  state.rs
src/components/block/runtime/: mod.rs  projection.rs  tests.rs
src/components/markdown/: inline.rs  paste.rs
src/components/mermaid/: mod.rs
src/config/: mod.rs  preferences.rs
src/editor/: events.rs  history.rs  render.rs  runtime_context.rs  selection.rs  tests.rs  window_state.rs
src/export/: html.rs
src/i18n/: mod.rs
src/theme/: theme.rs
theme/: fluent-theme.jsonc  one-dark-pro-theme.jsonc  one-light-theme.jsonc  sspai-misty-theme.jsonc
